--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,13 @@
 
 body {
   margin: 0;
+  color: var(--main-text-color);
+  background: var(--theme-background);
+  transition: color 0.3s ease, background 0.3s ease;
+}
+
+body::before {
+  color: var(--main-text-color);
+  background: var(--theme-background);
+  transition: color 0.3s ease, background 0.3s ease;
 }
