Added About me Page

--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,12 @@
   --footer-text-color: #fcfcfd;
   --first-accent-color: #057f84;
   --second-accent-color: #ffb188;
+  --first-switch-accent-color: #057f84;
+  --second-switch-accent-color: #ffb188;
   --theme-background: #fcfcfd;
   --main-gray-color: #d9d9d9;
   --theme-highlight-color: #ffb188;
+  --link-color: #448aff;
 }
 
 body {
