--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,19 @@ h5,
 }
 
 .AboutMe,
-.Projects {
+.Projects,
+.Experience {
   min-height: 100vh;
   padding: 96px 4.16vw;
+  height: fit-content;
+}
+
+h3 {
+  font-size: 2.9vw;
+  margin-top: 90px;
+  text-align: center;
+}
+ul {
+  list-style: none;
+  padding: 0;
 }
