Adde Dictionary project, links to projects, changed text color of light theme, added transition to navbar

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
 }
 
 :root {
-  --main-text-color: #000000;
+  --main-text-color: #13293d;
   --footer-text-color: #fcfcfd;
   --first-accent-color: #057f84;
   --second-accent-color: #ffb188;
