--- a/src/projects-page/Project.css
+++ b/src/projects-page/Project.css
@@ -44,3 +44,8 @@
   display: flex;
   justify-content: space-between;
 }
+@media screen and (orientation: portrait) {
+  .Project {
+    min-height: fit-content;
+  }
+}
