Added responsive to Experience page

--- a/src/experience-page/Experience.css
+++ b/src/experience-page/Experience.css
@@ -29,3 +29,20 @@
   color: var(--first-accent-color);
   font-weight: bold;
 }
+@media (max-width: 1200px) {
+  .Experience .experience-block {
+    font-size: 14px;
+  }
+  .Experience .skill-header {
+    font-size: 16px;
+  }
+}
+@media (max-width: 767.98px) {
+  .Experience .years {
+    position: static;
+    margin-right: 30px;
+  }
+  .Experience .header {
+    margin: 80px 0 40px;
+  }
+}
