--- a/src/contacts-page/Contacts.css
+++ b/src/contacts-page/Contacts.css
@@ -39,9 +39,6 @@
   height: 65vh;
   background: var(--first-accent-color);
 }
-.Contacts .contact-content p {
-  margin: 4.5vh 0 5.4vh;
-}
 
 .Contacts .email-info {
   font-size: 2.9vw;
@@ -97,4 +94,58 @@
 
 .Contacts .email {
   font-size: 2.5vw;
+}
+
+@media screen and (orientation: portrait) {
+  .Contacts {
+    font-size: 2vh;
+  }
+  .Contacts .email-info {
+    font-size: 4vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+  .Contacts .contact-icons a {
+    font-size: 5vh;
+  }
+  .Contacts .contact-icons img {
+    height: 4.5vh;
+  }
+  .Contacts .copyright {
+    font-size: 1.8vh;
+  }
+  .Contacts .email {
+    font-size: 3.5vh;
+  }
+}
+
+@media (max-width: 1200px) {
+  .Contacts .contact-me {
+    margin: 50px 40px;
+    padding: 50px 40px;
+  }
+  .Contacts .get-in-touch .resume,
+  .Contacts .contact-me h3,
+  .Contacts .email-block {
+    font-size: 24px;
+  }
+
+  .Contacts .contact-me p {
+    font-size: 14px;
+  }
+
+  .Contacts .contact-me a {
+    font-size: 18px;
+  }
+
+  .Contacts .contact-icons-block {
+    font-size: 20px;
+  }
+  .Contacts .contact-icons-block a {
+    width: 45px;
+    height: 45px;
+  }
+  .Contacts .copyright {
+    font-size: 12px;
+  }
 }
