--- a/src/navbar/ThemeSwitch.css
+++ b/src/navbar/ThemeSwitch.css
@@ -1,5 +1,6 @@
 .ThemeSwitch {
   width: 30px;
+  height: 32px;
   margin-right: 2vw;
   align-self: center;
 }
@@ -7,6 +8,11 @@
   background: none;
   border: none;
   width: inherit;
+  height: 100%;
+  padding: 5px;
+}
+.ThemeSwitch button i {
+  font-size: 18px;
 }
 
 .ThemeSwitch .fixed {
@@ -61,13 +67,13 @@
   margin: 0 5px;
 }
 
-.ThemeSwitch .icons svg {
+.ThemeSwitch .icons i {
   height: 15px;
   width: 15px;
 }
-.ThemeSwitch .sun {
-  fill: #ff7b54;
+.ThemeSwitch .fa-sun {
+  color: #ff7b54;
 }
-.ThemeSwitch .moon {
-  fill: #13293d;
+.ThemeSwitch .fa-moon {
+  color: #13293d;
 }
