Changed buttons style, fixed portrait orientation style for text in homepage

--- a/src/home-page/HomePage.css
+++ b/src/home-page/HomePage.css
@@ -93,10 +93,10 @@
 
 /* Homepage portrait orientation screen responsive */
 @media screen and (orientation: portrait) {
-  .HomePage h1 {
+  .HomePage .name-block {
     font-size: 5vw;
   }
-  .HomePage h2 {
+  .HomePage .profession-block {
     font-size: 6.5vw;
   }
   .HomePage .name {
