--- a/src/contacts-page/Contacts.css
+++ b/src/contacts-page/Contacts.css
@@ -50,12 +50,12 @@
 }
 
 /* Underline hover email*/
-.Contacts .email-info span {
+.Contacts .email-info .email {
   background-size: 0;
   transition: background-size 250ms ease-in-out;
 }
 
-.Contacts .email-info span:hover {
+.Contacts .email-info .email:hover {
   background: linear-gradient(
     transparent 50%,
     var(--theme-highlight-color) 50%,
